fixed text align

--- a/css/custom.css
+++ b/css/custom.css
@@ -165,7 +165,7 @@ header .header-content .header-content-inner p {
 	}
 
 .page-footer {
-	text-align: middle;
+	text-align: center;
 	}
 
 .page-footer .contact {
